# sempervivum

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  app.min.js  default.nix  flake.nix  index.html  manifest.json  nixpkgs-pinned.nix  sempervivum.cabal  species.json  species.toml  stack.yaml  style.css  sw.min.js
.github/workflows/: base.rcl  build.rcl  build.yml  deploy.rcl  deploy.yml  generate.sh
app/: Main.hs  Makefile  index.html  psc-package.json  spago.dhall  spago.yaml  style.css
app/src/: AppState.purs  Blob.js  Blob.purs  Cache.js  Cache.purs  Care.purs  Dom.js  Dom.purs  Fetch.js  Fetch.purs  File.js  File.purs  Html.purs  Idb.js  Idb.purs  Main.entry.js  Main.purs  Plant.purs  ServiceWorker.entry.js  ServiceWorker.purs  Species.purs  Time.js  Time.purs  Util.js  Util.purs  Var.js  Var.purs  Version.purs  View.purs
photos/: Makefile
species/: aglaonema_silver_bay.toml  aloe_vera.toml  areca_flavescens.toml  begonia_rex.toml  bromelia_guzmania.toml  cactus.toml  calathea_orbifolia.toml  chlorophytum_comosum.toml  clusia_rosea.toml  coffea_arabica.toml  cordyline_fruticosa.toml  ctenanthe_burle_marxii.toml  dieffenbachia_seguine.toml  dracaena_fragrans.toml  echeveria.toml  epipremnum_aureum.toml  fatsia_japonica.toml  ficus_benjamina.toml  ficus_ginseng.toml  hedera_helix.toml  monstera_deliciosa.toml  ocimum_basilicum.toml  pelargonium_graveolens.toml  peperomia_rotundifolia.toml  persea_americana.toml  philodendron_scandens.toml  philodendron_white_measure.toml  phlebodium_areum.toml  pilea_peperomioides.toml  rhaphidophora_tetrasperma.toml  sansevieria_trifasciata.toml  sarracenia.toml  scindapsus_pictus.toml  spathiphyllum.toml  species.toml  strelitzia_nicolai.toml  syngonium_podophyllum.toml  tillandsia.toml
src/: Care.hs  Catalog.hs  Database.hs  Main.hs  Plant.hs  Species.hs  Types.hs  WebInterface.hs
tests/: Spec.hs
util/: sempervivum.cabal  stack.yaml
util/src/: Main.hs
