name:                sempervivum
version:             0.0.0
category:            Bioinformatics
synopsis:            A plant watering tracker

copyright:           Copyright 2020 Ruud van Asseldonk
license:             Apache-2.0
license-file:        LICENSE

author:              Ruud van Asseldonk
maintainer:          dev@veniogames.com

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language: Haskell2010
  ghc-options:     -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-ignore-asserts
  hs-source-dirs:  src
  exposed-modules: Care
                 , Database
                 , Plant
                 , Species

  build-depends: aeson
               , base
               , bytestring
               , containers
               , directory
               , filepath
               , hashable
               , http-types
               , monad-logger
               , scotty
               , sqlite-simple
               , text
               , text-format
               , time
               , tomland
               , unordered-containers
               , warp

executable sempervivum
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates

  build-depends: aeson
               , base
               , directory
               , monad-logger
               , unordered-containers
               , scotty
               , sempervivum
               , sqlite-simple
               , text
               , time
               , transformers

test-suite spec
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: tests
  ghc-options:    -Wall -Werror

  build-depends: base
               , bytestring
               , containers
               , sempervivum
               , hspec
               , hspec-core
               , text
