name:                sempervivum
version:             0.0.0
category:            Bioinformatics
synopsis:            A plant watering tracker

copyright:           Copyright 2020 Ruud van Asseldonk
license:             Apache-2.0
license-file:        LICENSE

author:              Ruud van Asseldonk
maintainer:          dev@veniogames.com

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable sempervivum
  default-language: Haskell2010
  ghc-options:     -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-ignore-asserts
  hs-source-dirs:  src
  main-is:         Main.hs

  build-depends: aeson
               , base
               , bytestring
               , containers
               , directory
               , filepath
               , hashable
               , text
               , time
               , tomland
               , unordered-containers
